@@ -540,6 +540,9 @@ Trunk (unreleased changes)
     HADOOP-3831. Very slow reading clients sometimes failed while reading.
     (rangadi)
 
+		HADOOP-4155. Use JobTracker's start time while initializing JobHistory's
+    JobTracker Unique String. (lohit) 
+
 Release 0.18.1 - 2008-09-17
 
   IMPROVEMENTS
